# sops-wheel

./: CMakeLists.txt  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
sops_wheel/: executable.py
