[build-system]
requires = ["scikit-build-core>=0.3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "sops-wheel"
dynamic = ["version"]
description = "unoffical SOPS package"
authors = [{ name = "Nicolas Karolak", email = "nicolas@karolak.fr" }]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
keywords = ["sops"]

[project.urls]
repository = "https://github.com/nikaro/sops-wheel"

[project.scripts]
sops = "sops_wheel.executable:sops"

[tool.scikit-build]
wheel.install-dir = "sops_wheel"
wheel.py-api = "py2.py3"
wheel.packages = ["sops_wheel"]
cmake.args = []
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]

[tool.cibuildwheel]
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]
test-command = "sops -v"
